--- a/articles/er-evaluation-models/algebraic.tex
+++ b/articles/er-evaluation-models/algebraic.tex
@@ -224,8 +224,8 @@ Other similarity metrics used to compare partitions are the so-called pairwise
 and cluster metrics.
 Pairwise metrics were first introduced as alternative quality metrics to be used
 for evaluating entity resolution results\cite{Men10}.
-\textcolor{green}{eu as include si referintele "radacina": https://www.jstor.org/stable/pdf/1756667.pdf, https://www.cs.utexas.edu/users/ml/papers/marlin-kdd-wkshp-03.pdf}
-\textcolor{orange}{as vrea sa le includ, dar nu sunt sigur ca le pot include aici. referintele nu par sa aiba o legatura directa cu pairwise metrics. poate in alta parte?}
+% \textcolor{green}{eu as include si referintele "radacina": https://www.jstor.org/stable/pdf/1756667.pdf, https://www.cs.utexas.edu/users/ml/papers/marlin-kdd-wkshp-03.pdf}
+% \textcolor{orange}{as vrea sa le includ, dar nu sunt sigur ca le pot include aici. referintele nu par sa aiba o legatura directa cu pairwise metrics. poate in alta parte?}
 
 Similarly to the Rand Index, pairwise metrics rely on extracting pairs of items
 to determine how similar two partitions over the same set are.
