--- a/articles/er-evaluation-models/convert.tex
+++ b/articles/er-evaluation-models/convert.tex
@@ -1,5 +1,6 @@
 
-\textcolor{green}{sub-sectiunea aceasta e f incitanta si cred ca reprezinta una din contributiile importante ale lucrarii; nu mi-e clar daca se poate prezenta ca o "aliniere" originala a celor 2 modele (adica daca s-a mai facut asa ceva in literatura pana acum in acelasi stil sau , daca s-a facut, dar s-a facut in alt fel) sau sub forma unor discutii/analize f revelatoare}
+% \textcolor{green}{sub-sectiunea aceasta e f incitanta si cred ca reprezinta una din contributiile importante ale lucrarii; nu mi-e clar daca se poate prezenta ca o "aliniere" originala a celor 2 modele (adica daca s-a mai facut asa ceva in literatura pana acum in acelasi stil sau , daca s-a facut, dar s-a facut in alt fel) sau sub forma unor discutii/analize f revelatoare}
+\textcolor{green}{as muta subsectiunea la exeprimente, chiar inainte de subsectiunea Outcomes from control data}
     
 As stated before, one of the misgivings of the Fellegi-Sunter model is that
 it captures relatively well the matching aspect of entity resolution without
